# stacksync-demo

./: .dockerignore  .prototools  Dockerfile  README.md  pyproject.toml
.github/workflows/: image-build.yaml
deploy/: Pulumi.production.yaml  Pulumi.yaml  index.ts  package.json  pnpm-lock.yaml
src/: app.py  harness.py  nsjail.cfg
